Bug 397021 - Net worth does not appear
Summary: Net worth does not appear
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-31 20:36 UTC by antoine
Modified: 2019-05-01 20:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.2
Sentry Crash Report:


Attachments
net worth does not appear (109.33 KB, image/png)
2018-07-31 20:36 UTC, antoine
Details

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2018-07-31 20:36:05 UTC
Created attachment 114237 [details]
net worth does not appear

Hi,

I am using kmy 5.0.1 on xubuntu 18.04.
I noticed that net worth does not appear on the  accounts, institutions, categories views. (see attachment)

antoine@Frankenstein:~$ apt show kmymoney
Package: kmymoney
Version: 5.0.1-2
Priority: optional
Section: universe/kde
Origin: Ubuntu
Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
Original-Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
Comment 1 Thomas Baumgart 2018-08-01 19:30:39 UTC
Git commit abebe72730b1065a3e443528c610a36fd6174a6a by Thomas Baumgart.
Committed on 01/08/2018 at 19:30.
Pushed by tbaumgart into branch 'master'.

Fix total networth and profit display

The total value display on the accounts, categories and institutions
view was broken due to one of the recent changes. This change brings
back the function.

M  +2    -2    kmymoney/models/accountsmodel.cpp
M  +4    -1    kmymoney/views/kaccountsview.cpp
M  +0    -1    kmymoney/views/kaccountsview_p.h
M  +4    -2    kmymoney/views/kcategoriesview.cpp
M  +0    -1    kmymoney/views/kcategoriesview_p.h
M  +4    -2    kmymoney/views/kinstitutionsview.cpp
M  +0    -1    kmymoney/views/kinstitutionsview_p.h
M  +1    -0    kmymoney/views/kmymoneyview.cpp

https://commits.kde.org/kmymoney/abebe72730b1065a3e443528c610a36fd6174a6a
Comment 2 lp.allard.1 2019-04-28 18:17:03 UTC
TO OP:  is this visible under "Accounts" ?

Under KMM 5.0.0 I see "Total Profits:" at the lower right corner instead of "Net worth".  Before I open a separate bug reporet please confirm if you noticed this.
Comment 3 lp.allard.1 2019-05-01 20:20:57 UTC
Please ignore my last comment, I confirm this has been fixed in 5.0.4