Fix total networth and profit display

The total value display on the accounts, categories and institutions
view was broken due to one of the recent changes. This change brings
back the function.

BUG: 397021