kmymoney/views/kaccountsview_p.h
@@ -76,7 +76,6 @@ public:
   void init()
   {
     Q_Q(KAccountsView);
-    ui->setupUi(q);
     m_accountTree = &ui->m_accountTree;
 
     // setup icons for collapse and expand button
