kmymoney/views/kcategoriesview_p.h
@@ -63,7 +63,6 @@ public:
   void init()
   {
     Q_Q(KCategoriesView);
-    ui->setupUi(q);
     m_accountTree = &ui->m_accountTree;
 
     // setup icons for collapse and expand button
